<resources>
    <string name="app_name">Easy Task Manager</string>
    <string name="titulo">Título</string>
    <string name="limpar">Limpar</string>
    <string name="erro_campo_vazio">Existe(m) campo(s) vazio(s). \n Preencha-os!</string>
    <string name="campos_limpos">Campos Limpos!</string>
    <string name="quando">Quando</string>
    <string name="onde">Onde</string>
    <string name="diaInteiro">Dia inteiro</string>
    <string name="descricao">Descrição</string>
    <string name="periodo">Período</string>
    <string name="periodoManha">Manhã</string>
    <string name="periodoTarde">Tarde</string>
    <string name="periodoNoite">Noite</string>
    <string name="prioridadeSpinner">Prioridade</string>
    <string name="radioButtonNaoSelecionado">Nenhum RadioButton Selecionado!</string>
    <string name="mostrar">Mostrar</string>
    <string name="salvar">Salvar</string>
    <string name="foi_clicado">" foi clicado!"</string>
    <string name="prioridade_baixa">Baixa</string>
    <string name="prioridade_media">Média</string>
    <string name="prioridade_alta">Alta</string>
    <string name="tarefa_1">P2 de Física 1</string>
    <string name="tarefa_2">P1 de Algoritmos</string>
    <string name="tarefa_3">Apresentação do trabalho de introdução</string>
    <string name="tarefa_4">P3 de Cálculo 2</string>
    <string name="tarefa_5">Sub de G.A</string>
    <string name="tarefa_6">P3 de Lógica de Computação</string>
    <string name="tarefa_7">Apresentação de Matemática Discreta</string>
    <string name="tarefa_8">P1 de I.A</string>
    <string name="tarefa_1_local">P-202</string>
    <string name="tarefa_2_local">P-105</string>
    <string name="tarefa_3_local">A-128</string>
    <string name="tarefa_4_local">A-132</string>
    <string name="tarefa_5_local">A-127</string>
    <string name="tarefa_6_local">K-202</string>
    <string name="tarefa_7_local">I-104</string>
    <string name="tarefa_8_local">P-205</string>
    <string name="tarefa_1_descricao">Ondas eletromagnéticas</string>
    <string name="tarefa_2_descricao">Estrutura condicional</string>
    <string name="tarefa_3_descricao">Papel do engenheiro na sociedade</string>
    <string name="tarefa_4_descricao">Integral tripla</string>
    <string name="tarefa_5_descricao">Matrizes</string>
    <string name="tarefa_6_descricao">Mapa de Karnaugh</string>
    <string name="tarefa_7_descricao">Estruturas algébricas e suas aplicações</string>
    <string name="tarefa_8_descricao">Mapeamento facial</string>
    <string name="data_1">07/08/2021</string>
    <string name="data_2">08/07/2021</string>
    <string name="data_3">15/08/2021</string>
    <string name="sobre">Sobre</string>
    <string name="adicionar">Adicionar</string>
    <string name="descricao_autoria">"  O aplicativo tem como intuito auxiliar discentes em suas tarefas acadêmicas."</string>
    <string name="titulo_autoria">Sobre o aplicativo</string>
    <string name="descricao_autor_autoria">"  A aplicação foi idealizada pelo aluno Nelson Antonio Neto Toneze, para a disciplina de Programação para Dispositivos Móveis, ministrada pelo professor Alexandre Romolo Moreira Feitosa."</string>
    <string name="nome_utfpr">Universidade Tecnológica Federal do Paraná</string>
    <string name="campus_utfpr">Campus Cornélio Procópio</string>
    <string name="cadastrar_tarefa">Cadastrar tarefa</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="sugestao">Manter como sugestão</string>
</resources>