<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ActivityCadastraTarefasView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitulo"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <EditText
            android:id="@+id/editTextData"
            android:layout_width="332dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewData" />

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/quando"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSugestao" />

    <EditText
        android:id="@+id/editTextOnde"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnde" />

    <TextView
        android:id="@+id/textViewOnde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/onde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextData" />

    <CheckBox
        android:id="@+id/checkBoxDiaInteiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/diaInteiro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescricao" />

        <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricao" />

    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/descricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOnde" />

    <RadioGroup
        android:id="@+id/radioGroupPeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPeriodo">

        <RadioButton
            android:id="@+id/radioButtonPeriodoManha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/periodoManha" />

        <RadioButton
            android:id="@+id/radioButtonPeriodoTarde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/periodoTarde" />

        <RadioButton
            android:id="@+id/radioButtonPeriodoNoite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/periodoNoite" />
    </RadioGroup>

        <TextView
            android:id="@+id/textViewPeriodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/periodo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPrioridade" />

        <Spinner
            android:id="@+id/spinnerPrioridade"
            android:layout_width="332dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSpinnerPrioridade" />

        <TextView
            android:id="@+id/textViewSpinnerPrioridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/prioridadeSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxDiaInteiro" />

        <CheckBox
            android:id="@+id/checkBoxSugestao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/sugestao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitulo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>