<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAutoriaView">

    <TextView
        android:id="@+id/descricao_autoria"
        android:layout_width="368dp"
        android:layout_height="38dp"
        android:justificationMode="inter_word"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/descricao_autoria"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_autoria" />

    <TextView
        android:id="@+id/titulo_autoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_autoria"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descricao_autor_autoria"
        android:layout_width="371dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:justificationMode="inter_word"
        android:text="@string/descricao_autor_autoria"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricao_autoria" />

    <ImageView
        android:id="@+id/imageViewUtfpr"
        android:layout_width="206dp"
        android:layout_height="125dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricao_autor_autoria"
        app:srcCompat="@drawable/ic_action_utfpr" />

    <TextView
        android:id="@+id/textViewUtfprNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/nome_utfpr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUtfpr" />

    <TextView
        android:id="@+id/textViewUtfprCampus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/campus_utfpr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUtfprNome" />
</androidx.constraintlayout.widget.ConstraintLayout>